Prueba de comunicación con servidor y git

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hola Mundo</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iure ab explicabo, porro iste sit reiciendis nemo aliquid totam laudantium ratione culpa deserunt architecto est eligendi quos aliquam, odio atque aperiam dolores quae! Ad voluptatibus itaque molestiae error aliquam facere possimus assumenda fugiat quidem! Optio, rem omnis vel dolorum error labore?</p>
 </body>
 </html>
